implement test progress, cleanup